added specific folder for each role. updated hero roster. fixed typos in hero names

--- a/Views/Home/Tanks.cshtml
+++ b/Views/Home/Tanks.cshtml
@@ -22,7 +22,7 @@
                 @if (!string.IsNullOrWhiteSpace(item.ImgName))
                 {
                     <span>
-                        <img class="images" src=@($"/Images/{item.ImgName}.png") />
+                        <img class="images" src=@($"/Images/Tanks/{item.ImgName}.png") />
                     </span>
                 }
                 <h2 id="gettingStartedTitle">@item.Name</h2>
