--- a/Views/Home/Support.cshtml
+++ b/Views/Home/Support.cshtml
@@ -21,7 +21,7 @@
                 @if (!string.IsNullOrWhiteSpace(item.ImgName))
                 {
                     <span>
-                        <img class="images" src=@($"/Images/{item.ImgName}.png") />
+                        <img class="images" src=@($"/Images/Support/{item.ImgName}.png") />
                     </span>
                 }
                 <h2 id="gettingStartedTitle">@item.Name</h2>
