made styling changes to the pages as well as the logos

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <body>
     <style>
         body {
-            background-color: deepskyblue
+            background-color: #1e2129;
         }
     </style>
 </body>
@@ -16,7 +16,7 @@
         <div style="text-align:center">
 
             <div>
-                <img src="~/Images/Overwatch-Logo.png" alt="Logo.png" class="mainLogo" />
+                <img src="~/Images/overwatchLong.png" alt="Overwatch Logo" class="mainLogo" />
             </div>
 
             <p>
