--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -9,8 +9,12 @@ html {
 }
 .mainLogo {
     text-align: center;
-    height: 200px;
-    width: 315px;
+    height: 220px;
+    width: 390px;
+}
+.logoSmall {
+    height: 50px ;
+    width: 50px ;
 }
 .images {
     height: 175px;
@@ -28,9 +32,26 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    color: white;
+    background-color: #1e2129;
 }
 .role {
     text-align: center;
     font-size: 64px;
+    font-family: Bahnschrift;
+}
+.card-img-top {
+    background-color: lightblue;
+    border: 4px solid #ffffff;
+}
+.heroName {
+    font-family: Verdana;
+    color: black;
+}
+p.overview {
+    font-family: Verdana;
+}
+p.originStory {
+    font-family: Verdana;
 }
